update ui of the java app